cleanup and move to betterauth
