# examples/common_nestjs_remix/apps/api/src/storage/schema/index.ts
@@ -1,17 +1,1 @@
-import { pgTable, text, uuid } from "drizzle-orm/pg-core";
-import { id, timestamps } from "./utils";
-
-export const users = pgTable("users", {
-  ...id,
-  ...timestamps,
-  email: text("email").notNull().unique(),
-});
-
-export const credentials = pgTable("credentials", {
-  ...id,
-  ...timestamps,
-  userId: uuid("user_id")
-    .references(() => users.id, { onDelete: "cascade" })
-    .notNull(),
-  password: text("password").notNull(),
-});
+export * from "./auth-schema";
